--- a/boutus.html
+++ b/boutus.html
@@ -17,13 +17,13 @@
 
 	<div class="bar">	<ul>
 		<li><a href="index.html">home</a></li>
-		<li><a href="C:\Users\admin\Desktop\webworld\HTML AND CSS\boutus.html">about us</a></li>
+		<li><a href="boutus.html">about us</a></li>
 		<li>
 			
 		<a href="#">Our new models</a>
 		</li>
 		<li><a href="#">gallery</a></li>
-		<li><a href="C:\Users\admin\Desktop\webworld\HTML AND CSS\contactus.html">contact us</a></li>
+		<li><a href="contactus.html">contact us</a></li>
 	</ul></div>
 	<h1>About Us</h1>
 	<center><h2>Rolls Royce Motors</h2></center>
