--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 		</div>
 	<div class="bar">	<ul>
 		<li><a href="index.html">home</a></li>
-		<li><a href="C:\Users\admin\Desktop\webworld\HTML AND CSS\boutus.html">about us</a></li>
+		<li><a href="boutus.html">about us</a></li>
 		<li><a href="#">our new models
 			</a></li>
 		</select>
 		</li>
 		<li><a href="#">gallery</a></li>
-		<li><a href="C:\Users\admin\Desktop\webworld\HTML AND CSS\contactus.html">contact us</a></li>
+		<li><a href="contactus.html">contact us</a></li>
 	</ul></div>
 		<div  >
 		<h2 id="a" >Featured Models</h2>
@@ -36,15 +36,15 @@
 		<div class="servicecontainer">
 			<div class="datadivision">
 				<img src="https://stimg.cardekho.com/images/carexteriorimages/630x420/Rolls-Royce/Rolls-Royce-Phantom/7783/1587206758888/front-left-side-47.jpg" alt=""><br>
-				<h3>rols-Royce-phantom</h3><p>Rolls-Royce has revealed the prices of the eighth-generation of the Phantom in India. The CBU unit is priced at Rs 9.5 crores for the standard wheelbase and extends to Rs 11.5 crores for the extended wheelbase version with personalisation options. </p><P><button><a href="C:\Users\admin\Desktop\webworld\HTML AND CSS\panton.html">read more</a></button></P>
+				<h3>rols-Royce-phantom</h3><p>Rolls-Royce has revealed the prices of the eighth-generation of the Phantom in India. The CBU unit is priced at Rs 9.5 crores for the standard wheelbase and extends to Rs 11.5 crores for the extended wheelbase version with personalisation options. </p><P><button><a href="panton.html">read more</a></button></P>
 			</div>
 			<div class="datadivision">
 				<img src="https://stimg.cardekho.com/images/carexteriorimages/630x420/Rolls-Royce/Rolls-Royce-Ghost/6397/1594192080019/front-left-side-47.jpg?tr=w-456" alt=""><br>
-				<h3>Rolls-Royce-Ghost</h3><p>Priced at Rs 4.7 crore, the Rolls-Royce Ghost is among the most affordable luxury cars in the Rolls-Royce range. But that doesn’t make it any less of a status symbol. If anything, it’s more expensive than the Mercedes S-Class and Bentley Flying Spur by about Rs 2 crore.</p><P><button><a href="C:\Users\admin\Desktop\webworld\HTML AND CSS\ghost.html">read more</a></button></P>
+				<h3>Rolls-Royce-Ghost</h3><p>Priced at Rs 4.7 crore, the Rolls-Royce Ghost is among the most affordable luxury cars in the Rolls-Royce range. But that doesn’t make it any less of a status symbol. If anything, it’s more expensive than the Mercedes S-Class and Bentley Flying Spur by about Rs 2 crore.</p><P><button><a href="ghost.html">read more</a></button></P>
 			</div>
 			<div class="datadivision">
 				<img src="https://stimg.cardekho.com/images/carexteriorimages/630x420/Rolls-Royce/Rolls-Royce-Cullinan/6405/1556533266269/front-left-side-47.jpg?tr=w-456" alt=""><br>
-				<h3>Rolls-Royce-Cullinan</h3><p>Rolls Royce has launched the Cullinan in India at Rs 6.95 crore (ex-showroom pan-India). It is based on the carmaker’s aluminium space frame architecture, called ‘The Architecture of Luxury’. The Cullinan is powered by a 6.75-litre V12 petrol engine that makes 571PS/850Nm.,</p><P><button ><a href="C:\Users\admin\Desktop\webworld\HTML AND CSS\cullinan.html">read more</a></button></P>
+				<h3>Rolls-Royce-Cullinan</h3><p>Rolls Royce has launched the Cullinan in India at Rs 6.95 crore (ex-showroom pan-India). It is based on the carmaker’s aluminium space frame architecture, called ‘The Architecture of Luxury’. The Cullinan is powered by a 6.75-litre V12 petrol engine that makes 571PS/850Nm.,</p><P><button ><a href="cullinan.html">read more</a></button></P>
 			</div>
 			
 		</div>
