--- a/panton.html
+++ b/panton.html
@@ -18,28 +18,28 @@
 	
 	<div class="bar">	<ul>
 		<li><a href="index.html">home</a></li>
-		<li><a href="C:\Users\admin\Desktop\webworld\HTML AND CSS\boutus.html">about us</a></li>
+		<li><a href="boutus.html">about us</a></li>
 		<li><a href="#">our new models
 			</a></li>
 		</select>
 		</li>
 		<li><a href="#">gallery</a></li>
-		<li><a href="C:\Users\admin\Desktop\webworld\HTML AND CSS\contactus.html">contact us</a></li>
+		<li><a href="contactus.html">contact us</a></li>
 	</ul></div>
 		
 			<h1>Rolls Royce Phantom</h1>
 			<b>Rolls-Royce</b> has used the Phantom name on luxury cars over the past century:
 			<ul>
-				<li><a href="C:\Users\admin\Desktop\webworld\HTML AND CSS\pi.html">Rolls-Royce Phantom I</a>, 1925–1931</li>
-				<li><a href="C:\Users\admin\Desktop\webworld\HTML AND CSS\pii.html">Rolls-Royce Phantom II</a>, 1929–1936</li>
-				<li><a href="C:\Users\admin\Desktop\webworld\HTML AND CSS\piii.html">Rolls-Royce Phantom III</a>, 1936–1939</li>
-				<li><a href="C:\Users\admin\Desktop\webworld\HTML AND CSS\piv.html">Rolls-Royce Phantom IV</a>, 1950–1956</li>
-				<li><a href="C:\Users\admin\Desktop\webworld\HTML AND CSS\pv.html">Rolls-Royce Phantom V</a>, 1959–1968</li>
-				<li><a href="C:\Users\admin\Desktop\webworld\HTML AND CSS\pvi.html">Rolls-Royce Phantom VI</a>, 1968–1990</li>
-				<li><a href="C:\Users\admin\Desktop\webworld\HTML AND CSS\pvii.html">Rolls-Royce Phantom VII</a>, 2003–2017</li>
-				<li><a href="C:\Users\admin\Desktop\webworld\HTML AND CSS\pdc.html">Rolls-Royce Phantom Drophead Coupé</a>, 2007–2016</li>
-				<li><a href="C:\Users\admin\Desktop\webworld\HTML AND CSS\pc.html">Rolls-Royce Phantom Coupé</a>, 2008–2016</li>
-				<li><a href="C:\Users\admin\Desktop\webworld\HTML AND CSS\pviii.html">Rolls-Royce Phantom VIII</a>, 2017–present</li>
+				<li><a href="pi.html">Rolls-Royce Phantom I</a>, 1925–1931</li>
+				<li><a href="pii.html">Rolls-Royce Phantom II</a>, 1929–1936</li>
+				<li><a href="piii.html">Rolls-Royce Phantom III</a>, 1936–1939</li>
+				<li><a href="piv.html">Rolls-Royce Phantom IV</a>, 1950–1956</li>
+				<li><a href="pv.html">Rolls-Royce Phantom V</a>, 1959–1968</li>
+				<li><a href="pvi.html">Rolls-Royce Phantom VI</a>, 1968–1990</li>
+				<li><a href="pvii.html">Rolls-Royce Phantom VII</a>, 2003–2017</li>
+				<li><a href="pdc.html">Rolls-Royce Phantom Drophead Coupé</a>, 2007–2016</li>
+				<li><a href="pc.html">Rolls-Royce Phantom Coupé</a>, 2008–2016</li>
+				<li><a href="pviii.html">Rolls-Royce Phantom VIII</a>, 2017–present</li>
 			</ul>
 			<center><footer >Devoloped by p.s.sai deeraj,roll number:18699A0534</footer></center>
 </body>
