--- a/piv.html
+++ b/piv.html
@@ -18,13 +18,13 @@
 	
 	<div class="bar">	<ul>
 		<li><a href="index.html">home</a></li>
-		<li><a href="C:\Users\admin\Desktop\webworld\HTML AND CSS\boutus.html">about us</a></li>
+		<li><a href="boutus.html">about us</a></li>
 		<li><a href="#">our new models
 			</a></li>
 		</select>
 		</li>
 		<li><a href="#">gallery</a></li>
-		<li><a href="C:\Users\admin\Desktop\webworld\HTML AND CSS\contactus.html">contact us</a></li>
+		<li><a href="contactus.html">contact us</a></li>
 	</ul></div>
 	<h1>Rolls Royce Phantom-IV</h1>
 	<div class="ab0">
