--- a/cullinan.html
+++ b/cullinan.html
@@ -44,6 +44,6 @@
 		<p>A model was spotted testing on 23 December 2015 by Autocar.</p>
 			<p>The name "Cullinan" was confirmed by Rolls Royce on 13 February 2018.It is named after the Cullinan diamond, the largest diamond ever found at 3100 carats.</p>
 	</div>
-	<center><footer >Devoloped by p.s.sai deeraj,roll number:18699A0534</footer></center>
+	<center><footer >Devoloped by p.s.sai deeraj,roll number:18699A0534 on WEB CLUB,mitsid-MITS1920WC26</footer></center>
 </body>
 </html>
