--- a/panton.html
+++ b/panton.html
@@ -41,6 +41,6 @@
 				<li><a href="pc.html">Rolls-Royce Phantom Coupé</a>, 2008–2016</li>
 				<li><a href="pviii.html">Rolls-Royce Phantom VIII</a>, 2017–present</li>
 			</ul>
-			<center><footer >Devoloped by p.s.sai deeraj,roll number:18699A0534</footer></center>
+			<center><footer >Devoloped by p.s.sai deeraj,roll number:18699A0534 on WEB CLUB,mitsid-MITS1920WC26</footer></center>>
 </body>
 </html>
