--- a/pc.html
+++ b/pc.html
@@ -41,6 +41,6 @@
 <div class="ab3">
 	<p>The Phantom Coupé is capable of accelerating from 0-60 mph (0–97 km/h) in 5.8 seconds and has a limited top speed of 155 mph (249 km/h), with a fuel consumption in combined cycle (ECE+EUDC) of 16 L/100 km (18 mpg‑imp; 15 mpg‑US) while producing 377g/km of CO2</p>
 </div>
-	<center><footer >Devoloped by p.s.sai deeraj,roll number:18699A0534</footer></center>
+	<center><footer >Devoloped by p.s.sai deeraj,roll number:18699A0534 on WEB CLUB,mitsid-MITS1920WC26</footer></center>
 </body>
 </html>
