--- a/pdc.html
+++ b/pdc.html
@@ -41,6 +41,6 @@
 <div class="ab3">
 	<p>Final assembly, including all body, paint, wood, and leather work, is completed to each customer's individual specification at the Rolls-Royce plant in Goodwood, West Sussex. The plant is close to the historic Goodwood Motor Racing Circuit.</p>
 </div>
-	<center><footer >Devoloped by p.s.sai deeraj,roll number:18699A0534</footer></center>
+	<center><footer >Devoloped by p.s.sai deeraj,roll number:18699A0534 on WEB CLUB,mitsid-MITS1920WC26</footer></center>
 </body>
 </html>
