--- a/pii.html
+++ b/pii.html
@@ -45,6 +45,6 @@
 	<p><b>chassis</b></p>
 	<p>The chassis of the Phantom II was completely new. The front axle was mounted on semi-elliptical leaf springs as on earlier 40/50 hp models, but the rear axle was now also mounted on semi-elliptical springs instead of cantilever springs. This, along with the drivetrain changes, allowed the frame to be lower than before, improving the handling.[1][3] The 4-wheel servo-assisted brakes from the Phantom I were continued, and the Bijur centralized lubrication system from the Springfield-built Phantom I was included on all Phantom II chassis.</p>
 </div>
-	<center><footer >Devoloped by p.s.sai deeraj,roll number:18699A0534</footer></center>
+	<center><footer >Devoloped by p.s.sai deeraj,roll number:18699A0534 on WEB CLUB,mitsid-MITS1920WC26</footer></center>
 </body>
 </html>
