--- a/piii.html
+++ b/piii.html
@@ -42,6 +42,6 @@
 <div class="ab3">
 	<p>The car features on-board jacking and a one-shot chassis lubrication system, operated by a lever inside the driver's compartment. Independent front suspension by a coil spring-based system is complemented by a carryover semi-elliptical spring unit in the rear. The car has a 4-speed manual transmission with synchromesh on gears 2, 3 and 4. An overdrive gearbox was added in 1938, the ratio change being contained in the gearbox rather than in a separate unit. The car has 4-wheel servo-assisted brakes applied by cable (using a servo made under licence from Hispano-Suiza). The radiator shell is of Staybrite steel.</p>
 </div>
-	<center><footer >Devoloped by p.s.sai deeraj,roll number:18699A0534</footer></center>
+	<center><footer >Devoloped by p.s.sai deeraj,roll number:18699A0534 on WEB CLUB,mitsid-MITS1920WC26</footer></center>
 </body>
 </html>
