--- a/pv.html
+++ b/pv.html
@@ -42,6 +42,6 @@
 <div class="ab3">
 	<p>Beatle John Lennon bought a 1964 Mulliner Park Ward Phantom V, finished in Valentines black. Everything was black except for the radiator, even the wheels. Lennon asked for the radiator to be black as well, but Rolls Royce refused.</p>
 </div>
-	<center><footer >Devoloped by p.s.sai deeraj,roll number:18699A0534</footer></center>
+	<center><footer >Devoloped by p.s.sai deeraj,roll number:18699A0534 on WEB CLUB,mitsid-MITS1920WC26</footer></center>
 </body>
 </html>
