--- a/pvi.html
+++ b/pvi.html
@@ -45,6 +45,6 @@
 
 </p>
 </div>
-	<center><footer >Devoloped by p.s.sai deeraj,roll number:18699A0534</footer></center>
+	<center><footer >Devoloped by p.s.sai deeraj,roll number:18699A0534 on WEB CLUB,mitsid-MITS1920WC26</footer></center>
 </body>
 </html>
