--- a/ghost.html
+++ b/ghost.html
@@ -45,6 +45,6 @@
 	<p>The Ghost was designed by Andreas Thurner and engineered by Helmut Riedl, who led the development of the larger Rolls-Royce Phantom. The Ghost, codenamed RR04 during its design phase, was developed to compete with vehicles significantly less expensive than the Phantom, such as the Bentley Flying Spur and V12 engine versions of the Mercedes-Benz S-Class.</p>
 	<p>The Ghost is based on a platform shared with the F01 BMW 7 Series.[8] The company concedes that 20% of parts are common to both cars. The Ghost has a 129.7-inch (3,290 mm) wheelbase, roof height, bonnet height and track widths all of its own, and the Ghost uses Phantom-style air springs. The car also shares the FlexRay electronic system with its larger stablemate.[9] The car has a curb weight of 5,445 lb (2,470 kg).</p>
 </div>
-	<center><footer >Devoloped by p.s.sai deeraj,roll number:18699A0534</footer></center>
+	<center><footer >Devoloped by p.s.sai deeraj,roll number:18699A0534 on WEB CLUB,mitsid-MITS1920WC26</footer></center>
 </body>
 </html>
