--- a/contactus.html
+++ b/contactus.html
@@ -4,6 +4,7 @@
 	<title>contact us</title>
 	<meta name="viewport" content="width=divice-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="7.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 	<div class="header">
@@ -34,7 +35,7 @@
 		<input type="text" name="name" placeholder="Enter your name"><br>
 		<label>Email:</label><br>
 		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSXp7LTbLTA3Mf2fAWkB55ua76vdYmOS2EBEg&usqp=CAU" width="20px" height="20px">
-		<input type="email" name="email" placeholder="Enter your personal email"><br>
+		<input type="email" name="email" placeholder='&#xf002 Enter your personal email'><br>
 		<label>Messege:</label><br>
 		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQV-M9XeZYTvNXkl_kAfTQXKzGp41zUEKlBkg&usqp=CAU" width="20px" height="20px">
 		<input type="text" name="Messege" placeholder="Enter your Messege" id="mes"><br>
@@ -51,5 +52,6 @@
 </div>
 
 	<center><footer >Devoloped by p.s.sai deeraj,roll number:18699A0534 on WEB CLUB,mitsid-MITS1920WC26</footer></center>
+	<script src="https://kit.fontawesome.com/yourcode.js"></script>
 </body>
 </html>
