--- a/contactus.html
+++ b/contactus.html
@@ -31,13 +31,13 @@
 	<form>
 		<label>Name:</label><br>
 		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTnGbZX14vO8yQpwzZmfspj6hgMtT7Do7Jj0A&usqp=CAU" width="20px" height="20px">
-		<input type="text" name="name" placeholder='Enter your name'><br>
+		<input type="text" name="name" placeholder='#&xf118;  Enter your name'class="placeicon"><br>
 		<label>Email:</label><br>
 		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSXp7LTbLTA3Mf2fAWkB55ua76vdYmOS2EBEg&usqp=CAU" width="20px" height="20px">
-		<input type="email" name="email" placeholder='Enter your personal email'><br>
+		<input type="email" name="email" placeholder=' #&xf1fa; Enter your personal email'class="placeicon"><br>
 		<label>Messege:</label><br>
 		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQV-M9XeZYTvNXkl_kAfTQXKzGp41zUEKlBkg&usqp=CAU" width="20px" height="20px">
-		<input type="text" name="Messege" placeholder='Enter your Messege' id="mes"><br>
+		<input type="text" name="Messege" placeholder='#&xf27a; Enter your Messege' class="placeicon"><br>
 		<button>Send messege</button>
 	</form>
 <div class="accounts">
