--- a/contactus.html
+++ b/contactus.html
@@ -37,7 +37,7 @@
 		<input type="email" name="email" placeholder=' &#xf1fa; Enter your personal email'class="placeicon"><br>
 		<label>Messege:</label><br>
 		
-		<input type="text" name="Messege" placeholder='&#xf27a; Enter your Messege' class="placeicon"><br>
+		<input type="text" name="Messege" placeholder='&#xf27a; Enter your Messege' class="placeicon" id="mes"><br>
 		<button>Send messege</button>
 	</form>
 <div class="accounts">
