--- a/contactus.html
+++ b/contactus.html
@@ -31,13 +31,13 @@
 	<form>
 		<label>Name:</label><br>
 		
-		<input type="text" name="name" placeholder='&#xf118;  Enter your name'class="placeicon"><br>
+		<input type="text" name="name" placeholder='&#xf007;  Enter your name'class="placeicon"><br>
 		<label>Email:</label><br>
 		
-		<input type="email" name="email" placeholder=' &#xf1fa; Enter your personal email'class="placeicon"><br>
+		<input type="email" name="email" placeholder='&#xf0e0; Enter your personal email'class="placeicon"><br>
 		<label>Messege:</label><br>
 		
-		<input type="text" name="Messege" placeholder='&#xf27a; Enter your Messege' class="placeicon" id="mes"><br>
+		<input type="text" name="Message" placeholder='&#xf075; Enter your Messege' class="placeicon" id="mes"><br>
 		<button>Send messege</button>
 	</form>
 <div class="accounts">
