--- a/contactus.html
+++ b/contactus.html
@@ -42,7 +42,7 @@
 	</form>
 <div class="accounts">
 	<h2>My accounts</h2>
-	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcT4x30YxvhZdj1Baj6UQbFYLh4YAgpJVP35uA&usqp=CAU" width="20px" height="20px"><a class="placeicon" href="#">Face book</a><br><br>
+	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcT4x30YxvhZdj1Baj6UQbFYLh4YAgpJVP35uA&usqp=CAU" width="20px" height="20px"><a class="&#xf007; placeicon" href="#">Face book</a><br><br>
 	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSkXH40xnGlTw1aGEgUz0vgSW_rOJC1yjcyOA&usqp=CAU" width="20px" height="20px"><a class="placeicon" href="#">Instagram</a>
 	<br><br>
 	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcT2J7Itp__IgdkBKuENV6l3QfvJXMY5xTKz4Q&usqp=CAU" width="20px" height="20px"><a class="placeicon" href="#">Twitter</a><br><br>
