--- a/contactus.html
+++ b/contactus.html
@@ -42,10 +42,10 @@
 	</form>
 <div class="accounts">
 	<h2>My accounts</h2>
-	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcT4x30YxvhZdj1Baj6UQbFYLh4YAgpJVP35uA&usqp=CAU" width="20px" height="20px"><a class="&#xf007; placeicon" href="#">Face book</a><br><br>
-	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSkXH40xnGlTw1aGEgUz0vgSW_rOJC1yjcyOA&usqp=CAU" width="20px" height="20px"><a class="placeicon" href="#">Instagram</a>
+	<img src="https://media1.picsearch.com/is?F2sP6SPXt5l2rWFie-5BLph3-wL-XkBqoC_fpEzuzEI&height=341" width="20px" height="20px"><a href="#">Face book</a><br><br>
+	<img src="https://media1.picsearch.com/is?YAA7DvirfjRSpAtB2KSugzg4qRRuiraeMq5AW6rS5aU&height=281" width="20px" height="20px"><a href="#">Instagram</a>
 	<br><br>
-	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcT2J7Itp__IgdkBKuENV6l3QfvJXMY5xTKz4Q&usqp=CAU" width="20px" height="20px"><a class="placeicon" href="#">Twitter</a><br><br>
+	<img src="https://media1.picsearch.com/is?J0_VYqIiD2VYf1_PeBJgRM7hG7mh-YTOjEaAsO12QJo&height=180" width="20px" height="20px"><a href="#">Twitter</a><br><br>
 	<img src="https://seeklogo.com/images/W/whatsapp-logo-112413FAA7-seeklogo.com.png" width="20px" height="20px"><a href="#">Whatsapp</a><br><br><br>
 </div>
 </div>
