--- a/contactus.html
+++ b/contactus.html
@@ -39,7 +39,7 @@
 		
 		<input type="text" name="Message" placeholder='&#xf075; Enter your Messege' class="placeicon" id="mes"><br>
 		<button>Send messege</button>
-	</form><hr>
+	</form>
 <div class="accounts">
 	<h2>My accounts</h2>
 	<img src="https://media1.picsearch.com/is?F2sP6SPXt5l2rWFie-5BLph3-wL-XkBqoC_fpEzuzEI&height=341" width="20px" height="20px"><a href="#">Face book</a><br><br>
