--- a/contactus.html
+++ b/contactus.html
@@ -37,7 +37,8 @@
 		<input type="email" name="email" placeholder='&#xf0e0; Enter your personal email'class="placeicon"><br>
 		<label>Messege:</label><br>
 		
-		<input type="text" name="Message" placeholder='&#xf075; Enter your Messege' class="placeicon" id="mes"><br>
+		<input type="text" name="Message" placeholder='&#xf075; Enter your Messege' class="placeicon" id="mes"><br><br>
+		<br>
 		<button onclick="on()">Send messege</button>
 		<p id="demo"></p>
 	</form>
