--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			</a></li>
 		</select>
 		</li>
-		<li><a href="#">gallery</a></li>
+		<li><a href="gallery.html">gallery</a></li>
 		<li><a href="contactus.html">contact us</a></li>
 	</ul></div>
 		<div  >
