--- a/boutus.html
+++ b/boutus.html
@@ -20,9 +20,9 @@
 		<li><a href="boutus.html">about us</a></li>
 		<li>
 			
-		<a href="#">Our new models</a>
+		<a href="models.html">Our new models</a>
 		</li>
-		<li><a href="#">gallery</a></li>
+		<li><a href="gallery.html">gallery</a></li>
 		<li><a href="contactus.html">contact us</a></li>
 	</ul></div>
 	<h1>About Us</h1>
