--- a/contactus.html
+++ b/contactus.html
@@ -20,9 +20,9 @@
 		<li><a href="index.html">home</a></li>
 		<li><a href="boutus.html">about us</a></li>
 		<li>
-			<a href="#">our new models</a>
+			<a href="models.html">our new models</a>
 		</li>
-		<li><a href="#">gallery</a></li>
+		<li><a href="gallery.html">gallery</a></li>
 		<li><a href="contactus.html">contact us</a></li>
 	</ul></div>
 	<h1>Contact us</h1>
