--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
 		<li><a href="boutus.html">about us</a></li>
 		<li>
 			
-		<a href="#">Our new models</a>
+		<a href="models.html">Our new models</a>
 		</li>
 		<li><a href="gallery.html">gallery</a></li>
 		<li><a href="contactus.html">contact us</a></li>
