--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<div class="bar">	<ul>
 		<li><a href="index.html">home</a></li>
 		<li><a href="boutus.html">about us</a></li>
-		<li><a href="#">our new models
+		<li><a href="models.html">our new models
 			</a></li>
 		</select>
 		</li>
