--- a/pviii.html
+++ b/pviii.html
@@ -19,11 +19,11 @@
 	<div class="bar">	<ul>
 		<li><a href="index.html">home</a></li>
 		<li><a href="boutus.html">about us</a></li>
-		<li><a href="#">our new models
+		<li><a href="models.html">our new models
 			</a></li>
 		</select>
 		</li>
-		<li><a href="#">gallery</a></li>
+		<li><a href="gallery.html">gallery</a></li>
 		<li><a href="contactus.html">contact us</a></li>
 	</ul></div>
 	<h1>Rolls-Royce Phantom VIII</h1>
