--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<div class="servicecontainer">
 			<div class="datadivision">
 				<img src="https://stimg.cardekho.com/images/carexteriorimages/630x420/Rolls-Royce/Rolls-Royce-Phantom/7783/1587206758888/front-left-side-47.jpg" alt=""><br>
-				<h3>rols-Royce-phantom</h3><p>Rolls-Royce has revealed the prices of the eighth-generation of the Phantom in India. The CBU unit is priced at Rs 9.5 crores for the standard wheelbase and extends to Rs 11.5 crores for the extended wheelbase version with personalisation options. </p><P><button><a href="panton.html">read more</a></button></P>
+				<h3>Rolls-Royce-phantom</h3><p>Rolls-Royce has revealed the prices of the eighth-generation of the Phantom in India. The CBU unit is priced at Rs 9.5 crores for the standard wheelbase and extends to Rs 11.5 crores for the extended wheelbase version with personalisation options. </p><P><button><a href="panton.html">read more</a></button></P>
 			</div>
 			<div class="datadivision">
 				<img src="https://stimg.cardekho.com/images/carexteriorimages/630x420/Rolls-Royce/Rolls-Royce-Ghost/6397/1594192080019/front-left-side-47.jpg?tr=w-456" alt=""><br>
