--- a/cullinan.html
+++ b/cullinan.html
@@ -23,7 +23,7 @@
 			</a></li>
 		</select>
 		</li>
-		<li><a href="gallery.com">gallery</a></li>
+		<li><a href="gallery.html">gallery</a></li>
 		<li><a href="contactus.html">contact us</a></li>
 	</ul></div>
 	<h1>Rolls Royce Cullinan</h1>
